# HPC-Assignment

./: CMakeLists.txt  README.md  run_experiments.sh
results/: results.csv
src/: filters.h  filters_cuda.cu  filters_omp.cpp  filters_serial.cpp  image_io.cpp  main.cpp
